tests/toast-results/Ver_2_Tests-2023-06-22T02:18:43.896Z/jt18/jlog.txt
--app=Ver_2_Tests --port=1886 --group=4 --data=127.0.0.1:6379 --edge=1 --long=37.1636 --lat=68.7252 --localregistryhost=0 --device
------
Current Device Node Id: 668ab824-b1c1-4b1c-846a-544659a69843
Starting App..
{ cmd: 6700, opt: 6701, data: { lifetime: 3000, k: 3 } }
Killing broker with PID:

STDERR: node:internal/event_target:1037
  process.nextTick(() => { throw err; });
                           ^

TypeError: this.ncache.getNumofFogs is not a function
    at JAMCore.hoistFog (/Users/ethanbreit/work/JAMScript/lib/jside/core/jamcore.js:370:29)
    at JAMCore.processWorkerMsg (/Users/ethanbreit/work/JAMScript/lib/jside/core/jamcore.js:167:22)
    at MessagePort.<anonymous> (/Users/ethanbreit/work/JAMScript/lib/jside/core/jamcore.js:100:22)
    at [nodejs.internal.kHybridDispatch] (node:internal/event_target:762:20)
    at exports.emitMessage (node:internal/per_context/messageport:23:28)

Node.js v20.2.0
kill: usage: kill [-s sigspec | -n signum | -sigspec] pid | jobspec ... or kill -l [sigspec]
ERROR!: cannot find the device j server




Test: jt18 Failed
Time to Compile: 1.54s
Time to Run Test: 0s
Reached 0 coverage markers out of 0
